--- a/package.json
+++ b/package.json
@@ -1,32 +1,22 @@
 {
-  "name": "expense-manager-rollup",
-  "type": "module",
+  "name": "tddd__vetportal",
   "version": "1.0.0",
-  "description": "",
-  "main": "public/index.js",
-  "style": "public/styles.css",
-  "files": [
-    "public"
-  ],
+  "main": "index.js",
   "scripts": {
-    "start": "rollup -c -w",
-    "build": "rollup"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
-    "core-js": "^3.30.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "regenerator-runtime": "^0.13.11"
+    "expo": "~48.0.11",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-native": "0.71.6"
   },
   "devDependencies": {
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "postcss": "8.1",
-    "rollup": "^3.20.7"
-  }
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
