--- a/package.json
+++ b/package.json
@@ -1,22 +1,41 @@
 {
-  "name": "tddd__vetportal",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
-  },
   "dependencies": {
-    "expo": "~48.0.11",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.6"
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.2",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "bootstrap-icons": "^1.10.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase": "^9.20.0",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "njwt": "^1.2.0",
+    "nodeenv": "^3.0.74",
+    "nodemon": "^2.0.19",
+    "postcss": "^8.4.23",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.71.7",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-scroll-to-bottom": "^4.2.0",
+    "reactjs-popup": "^2.0.5",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.6.1",
+    "sqlite3": "^5.1.6",
+    "styled-components": "^5.3.10"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node App.js",
+    "dev": "nodemon index.js",
+    "con": "concurrently --kill-others-on-fail\"npm run dev\"\"npm run start\""
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "web-vitals": "^3.3.1"
+  }
 }
