1. OwnersPage got more content and functions. Now information about pets is retrieved from DB including pictures (as local filepaths) and displayed in separate area of the page. 2. OwnersPage got a bit more styling. 3. APIs were modified a bit. 4. New pages drafts added.

--- a/client/package.json
+++ b/client/package.json
@@ -34,31 +34,39 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "express": "^4.18.2",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "nodemon": "^2.0.19",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.10.9",
+    "async_hooks": "^1.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "bootstrap-icons": "^1.8.3",
+    "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "firebase": "^9.20.0",
     "firebase-tools": "^11.3.0",
     "mysql": "^2.18.1",
     "nodeenv": "^3.0.74",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.23",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.8.4",
     "react-scroll": "^1.8.9",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.5.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^5.3.10",
     "uuid": "^8.3.2"
   }
