--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.2",
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.0",
+    "body-parser": "^1.20.2",
     "bootstrap-icons": "^1.10.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.20.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "njwt": "^1.2.0",
     "nodeenv": "^3.0.74",
     "nodemon": "^2.0.19",
+    "path": "^0.12.7",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
