--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
+    "date-fns": "^2.30.0",
     "firebase": "^9.20.0",
     "firebase-tools": "^11.3.0",
     "mysql": "^2.18.1",
