1. Implemented Admin's interface 2. Implemeted adding new user feature (doctor or pet owner - through admin interface) 3. Implemented the unavailability of already taken dates and times for a doctor's MakeAppointment 4. Minor corrections (bugs, improvements)

--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.10.9",
+    "@reduxjs/toolkit": "^1.9.5",
     "async_hooks": "^1.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -63,8 +64,11 @@
     "postcss": "^8.4.23",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.8.4",
+    "react-redux": "^8.0.5",
     "react-scroll": "^1.8.9",
     "react-scroll-to-bottom": "^4.2.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.5.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
