--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql": "^2.18.1",
     "njwt": "^1.2.0",
     "nodeenv": "^3.0.74",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.19",
     "path": "^0.12.7",
     "postcss": "^8.4.23",
