--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nanoid": "^4.0.2",
     "njwt": "^1.2.0",
     "nodeenv": "^3.0.74",
     "nodemailer": "^6.9.3",
@@ -30,7 +31,8 @@
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.6.1",
     "sqlite3": "^5.1.6",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
